Ajustes de layout
Tamaños de fuentes principalmente

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<title>Local Weather</title>
 	<link rel="stylesheet" href="main.css">
@@ -8,8 +9,8 @@
 <body>
 	<div id="wrapper" class="wrapper">
 		<header>
-			<h1 class="title">Free Code Camp Zipline</h1>
-			<h2 class="subtitle">Local Weather	App</h2>
+			<h1 class="title">Ploceus</h1>
+			<h2 class="subtitle">Local Weather App</h2>
 		</header>
 		<div class="loader">Collecting data from your city, please wait ...</div>
 		<div id="card-weather" class="card-weather">
@@ -21,7 +22,7 @@
 			</div>
 			<!-- Icon and actual temperature	 -->
 			<div class="card-body">
-				<img id="weather-icon" height="100px" width="100px" src="" alt="">
+				<img id="weather-icon" class="weather-icon" height="80px" width="80px" src="" alt="">
 				<div id="temp_current" class=" temp_current data"></div>
 				<div id="main" class="main data"></div>
 			</div>
